--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -3,6 +3,13 @@
   text-align: center;
 }
 
-main > .container {
-  padding-top: 80px;
+main {
+  .container {
+    padding-top: 60px;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
 }
