--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,3 +1,4 @@
 $primary-color: rgb(187,250,255);
 $background-color : rgb(28,32,41);
 $secondary-color: rgb(254,207,52);
+$max-z-index: 10;
